--- a/SaleWebMvc/Views/Shared/Error.cshtml
+++ b/SaleWebMvc/Views/Shared/Error.cshtml
@@ -1,4 +1,4 @@
-﻿@model SaleWebMvc.Models.ViewModels.ErrorViewModel
+﻿@model SalesWebMvc.Models.ViewModels.ErrorViewModel
 @{
     ViewData["Title"] = "Error";
 }
