--- a/SaleWebMvc/Views/_ViewImports.cshtml
+++ b/SaleWebMvc/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
-﻿@using SaleWebMvc
-@using SaleWebMvc.Models
+﻿@using SalesWebMvc
+@using SalesWebMvc.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
